fixes some sonar violations