@@ -12,7 +12,6 @@ import uk.co.mruoc.file.content.ContentLoader;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.function.UnaryOperator;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -56,7 +55,7 @@ public class FunctionLoader {
     private ChannelFunction toCombineFunction(String[] specs) {
         return new CompositeFunction(Arrays.stream(specs)
                 .map(this::toSingleFunction)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     private ChannelFunction toSingleFunction(String spec) {
